--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
             <a href="#"><i class="fa-solid fa-basket-shopping"></i> Panier</a>
         </div>    
     </header>
+
+    <section class="main-image">
+        <img src='http://fakeimg.pl/1160x360?font=lobster' alt=''/>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi.</p>
+        </div>
+    </section>
 </body>
 </html>
