--- a/index.html
+++ b/index.html
@@ -15,15 +15,55 @@
     <header>
         <div>
             <h1><i class="fa-solid fa-leaf"></i> Le Royaume Du Thé</h1>
-            <a href="#"><i class="fa-solid fa-basket-shopping"></i> Panier</a>
+            <a href="#" class="btn"><i class="fa-solid fa-basket-shopping"></i> Panier</a>
         </div>    
     </header>
 
-    <section class="main-image">
+    <section class="main_image">
         <img src='http://fakeimg.pl/1160x360?font=lobster' alt=''/>
         <div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, animi.</p>
         </div>
+    </section>
+
+    <section class="items">
+        <h2>Notre sélection de Thé</h2>
+
+        <div class="container_item">
+            <div class="item">
+                <img src='http://fakeimg.pl/280x190?font=lobster' alt=''/>
+                <div class="item_description">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ipsam et ut?</p>
+                    <a href="#" class="btn btn_red">Voir le produit</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src='http://fakeimg.pl/280x190?font=lobster' alt=''/>
+                <div class="item_description">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ipsam et ut?</p>
+                    <a href="#" class="btn btn_red">Voir le produit</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src='http://fakeimg.pl/280x190?font=lobster' alt=''/>
+                <div class="item_description">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ipsam et ut?</p>
+                    <a href="#" class="btn btn_red">Voir le produit</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src='http://fakeimg.pl/280x190?font=lobster' alt=''/>
+                <div class="item_description">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ipsam et ut?</p>
+                    <a href="#" class="btn btn_red">Voir le produit</a>
+                </div>
+            </div>
+        </div>
+        
     </section>
 </body>
 </html>
