Add section business

--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
                     <a href="#" class="btn btn_red">Voir le produit</a>
                 </div>
             </div>
+        </div>        
+    </section>
+
+    <section class="business">
+        <img src='http://fakeimg.pl/570x365?font=lobster' alt=''/>
+        <div class="description_business">
+            <h2>Notre Entreprise</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore dolorem ut unde, consequatur molestiae cupiditate aliquam nemo ipsam tempora facilis reiciendis neque nisi fugit reprehenderit repellat voluptas fugiat nihil sunt porro error exercitationem commodi maiores! Quisquam aspernatur vel natus velit, accusantium amet facilis illo laudantium optio, quod laboriosam nisi ut voluptates minus! Autem totam, aliquam natus, nemo eveniet libero ipsa, quisquam placeat sequi.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus error maiores pariatur voluptate, tenetur delectus, non assumenda necessitatibus possimus ipsa odio quibusdam cupiditate nisi facere reiciendis adipisci enim placeat architecto quisquam placeat.</p>
         </div>
-        
     </section>
 </body>
 </html>
