--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="container">
             <h1><i class="fa-solid fa-leaf"></i> Le Royaume Du Thé</h1>
             <a href="#" class="btn"><i class="fa-solid fa-basket-shopping"></i> Panier</a>
         </div>    
@@ -74,5 +74,15 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus error maiores pariatur voluptate, tenetur delectus, non assumenda necessitatibus possimus ipsa odio quibusdam cupiditate nisi facere reiciendis adipisci enim placeat architecto quisquam placeat.</p>
         </div>
     </section>
+
+    <footer>
+        <div class="container">            
+            <p><i class="fa-regular fa-copyright"></i> Le Royaume Du Thé</p>
+            <div>
+                <a href="#">Plan du site</a>
+                <a href="#">Mentions légales</a>
+            </div>
+        </div>            
+    </footer>
 </body>
 </html>
